// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemChooser renders as expected (without value) 1`] = `
<View>
  <Icon
    name="Search"
  />
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    autoFocus={false}
    editable={true}
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`ItemChooser renders as expected when loading 1`] = `
<View>
  <Icon
    name="Search"
  />
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    autoFocus={false}
    editable={true}
    underlineColorAndroid="transparent"
  />
  <Loading />
</View>
`;

exports[`ItemChooser renders as expected with value 1`] = `
<View>
  <Icon
    name="Search"
  />
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    autoFocus={false}
    editable={true}
    underlineColorAndroid="transparent"
    value="Anything"
  />
</View>
`;

exports[`ItemChooser renders with placeholder 1`] = `
<View>
  <Icon
    name="Search"
  />
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    autoFocus={false}
    editable={true}
    placeholder="Search anything"
    underlineColorAndroid="transparent"
  />
</View>
`;
